--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <img class="logo" src="images/advice.png" alt="">
             <ul>
                 <li><a href="#home">Home</a></li>
-                <li><a href="C:\Users\Aniket Wani\OneDrive\Desktop\PROJECT ISTE\form.html">Lineup</a></li>
+                <li><a href="form.html">Lineup</a></li>
                 <li><a href="#home">Tickets</a></li>
                 <li><a href="">Updates</a></li>
                 <li><a href="">Our Team</a></li>
@@ -26,7 +26,7 @@
         <div class="content" id="home">
             <h1>HOLISM</h1>
             <h2>Come join us</h2>
-            <a href="C:\Users\Aniket Wani\OneDrive\Desktop\PROJECT ISTE\form.html">2023 Lineup</a>
+            <a href="form.html">2023 Lineup</a>
             <a href="#info">Event Info</a>
             <a class="buy" href="">buy Limited ResaleTickets</a>
             
